--- a/public/style.css
+++ b/public/style.css
@@ -9,104 +9,11 @@ button {
   font-size: 20px;
 }
 
-body, #board, #panel, #trash, #board > * {
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-family: sans-serif;
-  font-size: 20px;
-}
-
 body {
   z-index: 1;
   min-height: 100vh;
-}
-
-#board {
-  transition: all 1s ease;
-  z-index: 2;
-  width: 640px;
-  height: 640px;
-  background-image: url("img/board.png");
-}
-
-#board > * {
-  transition: all 500ms ease;
-  z-index: 3;
-  width: 80px;
-  height: 80px;
-}
-
-#board.rotate {
-  transform: rotate(180deg);
-}
-
-#board.rotate > * {
-  transform: rotate(180deg);
-}
-
-#panel {
-  display: flex;
-  flex-direction: column;
-  left: 640px;
-  width: 300px;
-  height: 640px;
-}
-
-#panel > * {
-  white-space: nowrap;
-  padding: 15px;
-  border: 1px solid #000;
-  margin: 3px;
-  background-color: #c8c8ff;
-  color: #000;
-  text-align: center;
-}
-
-#panel > button:hover,
-#panel > label:hover {
-  background-color: #6161ff;
-  color: #fff;
-}
-
-#console {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: start;
-  white-space: pre-wrap;
-  text-align: left;
-  overflow: hidden;
-}
-
-#chat {
-  display: flex;
-}
-
-#chat > div {
-  display: flex;
-  flex-direction: column;
-}
-
-#field {
-  flex-grow: 1;
-}
-
-#trash {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  border: 2px solid #000;
-  justify-content: left;
-  align-items: start;
-  top: 0;
-  left: 940px;
-  width: 321px;
-  height: 641px;
-  background-color: antiquewhite;
-}
-
-.drag {
-  border: 3px solid #6161ff;
+  background-image: url("img/zaap.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
