re-organized files and added EJS

--- a/views/pages/bans-room.ejs
+++ b/views/pages/bans-room.ejs
@@ -1,5 +1,5 @@
-<%- include('head', { title: 'Krosmaga Hub | Bans' }) %>
-<%- include('socket.io') %>
+<%- include('includes/head', { title: 'Krosmaga Hub | Bans' }) %>
+<%- include('includes/socket.io') %>
 
 <script>
   var roomId = "<%= roomId %>"
