--- a/views/pages/zaap.ejs
+++ b/views/pages/zaap.ejs
@@ -1,5 +1,5 @@
-<%- include('head', { title: 'Zaap' }) %>
-<%- include('socket.io') %>
+<%- include('includes/head', { title: 'Zaap' }) %>
+<%- include('includes/socket.io') %>
 <style>
     body {
         background-image: url("/public/img/zaap.gif");
