added management of picks and bans

--- a/views/pages/bans-room.ejs
+++ b/views/pages/bans-room.ejs
@@ -1,5 +1,5 @@
-<%- include('includes/head', { title: 'Krosmaga Hub | Bans' }) %>
-<%- include('includes/socket.io') %>
+<%- include('../includes/head', { title: 'Krosmaga Hub | Bans' }) %>
+<%- include('../includes/socket-io') %>
 
 <script>
   var roomId = "<%= roomId %>"
