--- a/views/pages/zaap.ejs
+++ b/views/pages/zaap.ejs
@@ -1,5 +1,4 @@
-<%- include('includes/head', { title: 'Zaap' }) %>
-<%- include('includes/socket.io') %>
+<%- include('../includes/head', { title: 'Zaap' }) %>
 <style>
     body {
         background-image: url("/public/img/zaap.gif");
