--- a/public/styles/bans.no-room.css
+++ b/public/styles/bans.no-room.css
@@ -5,16 +5,19 @@
   border: 2px solid #797979;
   background-color: #c0c0c0;
   color: #565656;
+  cursor: wait;
 }
 
 #new-room-button.enabled {
   border: 2px solid #ffdd00;
   background-color: #00507a;
   color: #fdfadd;
+  cursor: pointer;
 }
 
 #new-room-button.enabled:hover {
   border: 2px solid #ffe23c;
   background-color: #006da8;
   color: #fff8f8;
+  cursor: pointer;
 }
