--- a/views/pages/bans-room.ejs
+++ b/views/pages/bans-room.ejs
@@ -3,6 +3,8 @@
 
 <script>
   var roomId = "<%= roomId %>"
+  var maxBanCount = "<%= maxBanCount %>"
+  var maxPickCount = "<%= maxPickCount %>"
 </script>
 
 <script defer src="/public/scripts/bans.room.js"></script>
