--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Secular One";
+  src: url("/public/fonts/SecularOne-Regular.ttf");
+}
+
 * {
   border: 0;
   margin: 0;
@@ -8,4 +13,55 @@
 body {
   z-index: 1;
   min-height: 100vh;
+  font-family: "Secular One", sans-serif;
+}
+
+p {
+  font-size: 1.2rem;
+  padding: 0.5rem 0;
+}
+
+label {
+  font-size: 1.2rem;
+  padding: 0.5rem 1rem;
+  border: #ffc500 solid 2px;
+  border-radius: 10px;
+  background-image: linear-gradient(to right, #00ffd7, #8c00ff);
+}
+
+label > input {
+  margin-left: 0.5rem;
+  border-radius: 5px;
+}
+
+button {
+  font-size: 2.5rem;
+  padding: 0.5rem 1rem;
+  border: #ffc500 solid 1px;
+  border-radius: 10px;
+  background-image: linear-gradient(to right, #00ffd7, #8c00ff);
+}
+
+button:hover {
+  border-width: 3px;
+}
+
+.flex-center-column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
