added next phases logics

--- a/views/pages/bans-room.ejs
+++ b/views/pages/bans-room.ejs
@@ -5,6 +5,7 @@
   var roomId = "<%= roomId %>"
   var maxBanCount = "<%= maxBanCount %>"
   var maxPickCount = "<%= maxPickCount %>"
+  var username = "<%= username %>"
 </script>
 
 <script defer src="/public/scripts/bans.room.js"></script>
