--- a/views/pages/bans-no-room.ejs
+++ b/views/pages/bans-no-room.ejs
@@ -14,8 +14,13 @@
     </p>
 
     <label class="flex">
-        Choisissez un nom pour votre session :
+        Choisissez un nom pour votre session (facultatif) :
         <input type="text" id="room-id-input" placeholder="Session ID" class="text-center">
+    </label>
+
+    <label class="flex">
+        Entrez votre pseudo in-game (avec le #tag) :
+        <input type="text" id="player-name-input" placeholder="Pseudo" class="text-center" pattern="^.+#\d{4}$">
     </label>
 
     <label class="flex">
