--- a/views/pages/bans-no-room.ejs
+++ b/views/pages/bans-no-room.ejs
@@ -20,7 +20,7 @@
 
     <label class="flex">
         Entrez votre pseudo in-game (avec le #tag) :
-        <input type="text" id="player-name-input" placeholder="Pseudo" class="text-center" pattern="^.+#\d{4}$">
+        <input type="text" id="username-input" placeholder="Pseudo" class="text-center" pattern="^.+#\d{4}$">
     </label>
 
     <label class="flex">
