removed useless css styles

--- a/views/pages/zaap.ejs
+++ b/views/pages/zaap.ejs
@@ -1,9 +1,11 @@
 <%- include('../includes/head', { title: 'Zaap' }) %>
+
 <style>
-    body {
-        background-image: url("/public/img/zaap.gif");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
+    
 </style>
+
+<body>
+    <div>
+        <img id= src="/public/img/zaap.gif" alt="zaap">
+    </div>
+</body>
